<resources>
    <string name="app_name">SmartBulter</string>
    <string name="service_butler">服务管家</string>
    <string name="wechat_news">微信精选</string>
    <string name="girls_community">美女社区</string>
    <string name="recent_weather">最近天气</string>
    <string name="text_setting">设置</string>
    <string name="into_home">进入主页</string>
    <string name="user_name">用户名</string>
    <string name="password">密码</string>
    <string name="login">登陆</string>
    <string name="register">注册</string>
    <string name="rm_password">记住密码</string>
    <string name="fg_password">忘记密码？</string>
    <string name="age">年龄：</string>
    <string name="desc">简介：</string>
    <string name="boy">男</string>
    <string name="girl">女</string>
    <string name="re_pass">确认密码</string>
    <string name="e_mail">邮箱</string>
    <string name="confirm">注册成功需要前往邮箱验证，否则无法登陆！</string>
    <string name="desc_content">这个人很懒，什么都没留下。</string>
    <string name="modify_pass">修改密码</string>
    <string name="old_pass">旧密码</string>
    <string name="new_pass">新密码</string>
    <string name="re_input">再次输入密码</string>
    <string name="forget_pass">忘记密码</string>
    <string name="email">邮箱</string>
    <string name="text_now_loading">正在登陆。。。</string>
    <string name="edit_user">编辑资料</string>
    <string name="name">姓名：</string>
    <string name="sex">性别：</string>
    <string name="confirm_modi">确定修改</string>
    <string name="n"/>
    <string name="location_search">归属地查询</string>
    <string name="exit">退出登陆</string>

</resources>
